test/integration/good/shadow.stan
parameters {
  real pow;
}
transformed parameters {
  print(pow(1,1));
  print(pow);
}
