test/integration/bad/data_index/non_data_index11.stan
parameters {
  array[3] real y;

}
transformed parameters {
  cholesky_factor_cov[3, size(y)] z;
}
